finish about,footer,portfolio for desktop

--- a/HomeWork/Template/index.html
+++ b/HomeWork/Template/index.html
@@ -14,34 +14,38 @@
 <body>
     <div class="container">
         <!-- start container -->
-
+        <div class="row"></div>
         <!-- start hero-block -->
         <div class="hero-block">
+
             <div class="header">
+
                 <div class="header__navigation">
-                    <div class="header__navigation-title">
-                        <span>Portofolio</span>
+                    <div class="row">
+                        <div class="header__navigation-title">
+                            <span>Portofolio</span>
+                        </div>
+                        <ul class="menu">
+                            <li>
+                                <a href="">Home</a>
+                            </li>
+                            <li>
+                                <a href="">About</a>
+                            </li>
+                            <li>
+                                <a href="">Skills</a>
+                            </li>
+                            <li>
+                                <a href="">Portfolio</a>
+                            </li>
+                            <li>
+                                <a href="">Contact</a>
+                            </li>
+                            <li>
+                                <a href=""></a>
+                            </li>
+                        </ul>
                     </div>
-                    <ul class="menu">
-                        <li>
-                            <a href="">Home</a>
-                        </li>
-                        <li>
-                            <a href="">About</a>
-                        </li>
-                        <li>
-                            <a href="">Skills</a>
-                        </li>
-                        <li>
-                            <a href="">Portfolio</a>
-                        </li>
-                        <li>
-                            <a href="">Contact</a>
-                        </li>
-                        <li>
-                            <a href=""></a>
-                        </li>
-                    </ul>
                 </div>
                 <!-- <div class="header__navigation">
                     <a href="">
@@ -86,11 +90,11 @@
             <div class="profile-details">
                 <div class="profile-details-block-left-side">
                     <span class="col-1">Profile</span>
-                    <span class="col-2">Front-end Dev</span>
+                    <span class="col-2">UX Research</span>
                     <span class="col-3">Tools</span>
                     <span class="col-4">UI Design</span>
                     <span class="col-5">Tools</span>
-                    <span class="col-6">UX Research</span>
+                    <span class="col-6">Front-end Dev</span>
                     <span class="col-7">Tools</span>
 
                 </div>
@@ -110,53 +114,68 @@
         <!-- close skills -->
         <!-- start portfolio -->
         <div class="portfolio">
-            <div class="portfolio__title">
-                <span class="portfolio__title-main">Portfolio</span>
-                <span class="portfolio__title-second">UX Research</span>
-            </div>
-            <div class="portfolio__info">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ac dictum nibh nam odio cursus id. Diam massa semper a tincidunt cursus ultricies lectus eget urna.</p>
-            </div>
-            <div class="portfolio__images">
-                <div class="side-left">
-                    <img class="portfolio-images" src="./img/portfolio_img-1.svg" alt="portfolio img-1">
-                    <img src="./img/portfolio_img-2.svg" alt="portfolio img-2">
+            <div class="row">
+                <div class="portfolio__title ">
+                    <span class="portfolio__title-main">Portfolio</span>
+                    <span class="portfolio__title-second">UX Research</span>
+                </div>
 
-                </div>
-                <div class="side-right">
-                    <img class="portfolio-images" src="./img/portfolio_img-3.svg" alt="portfolio img-3">
-                    <img src="./img/portfolio_img-4.svg" alt="portfolio img-4">
-                </div>
-            </div>
-            <!-- close portfolio -->
-            <!-- start Get_in_touch -->
-            <div class="Get__in__touch">
-                <div class="Get__in__touch-title"><span>Get in Touch</span></div>
-                <div class="Get__in__touch-details">
-                    <div class="side left">
-                        <span>Dribbble</span>
-                        <span>Behance</span>
-                        <span>CodePen</span>
-                        <span>GitHub</span>
-                        <span>Medium</span>
+                <div class="portfolio__images">
+                    <div class="portfolio__info">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ac dictum nibh nam odio cursus id. Diam massa semper a tincidunt cursus ultricies lectus eget urna.</p>
+                        <div class="portfolio__arrows">
+                            <span><img class="arrow"src="./img/arrow-left.svg" alt="">
+                            <img src="./img/arrow-right.svg" alt=""></span>
+                        </div>
+                    </div>
+                    <div class="side-left">
+                        <span class="img-1"><img src="./img/portfolio_img-1.svg" alt=""></span>
+                        <span><img src="./img/portfolio_img-2.svg" alt=""></span>
 
                     </div>
-                    <div class="side">
-                        <span>LinkedIn</span>
-                        <span>Facebook</span>
-                        <span>Instagram</span>
-                        <span>Twitter</span>
+                    <div class="side-right">
+                        <span class="img-1"><img src="./img/portfolio_img-3.svg" alt=""></span>
+                        <span><img src="./img/portfolio_img-4.svg" alt=""></span>
                     </div>
 
                 </div>
-                <div class="Get__in__touch-footer">
-                    <p>seyrig@mailme.com <br> + 55 6645 665544</p>
-                    <span><img src="./img/arrow.svg" alt=""></span>
-                </div>
             </div>
-            <!-- end Get_in_touch -->
         </div>
-        <!-- close container -->
+        <!-- close portfolio -->
+        <!-- start Get_in_touch -->
+        <div class="Get__in__touch">
+            <div class="Get__in__touch-title"><span>Get in Touch</span></div>
+            <div class="Get__in__touch-details">
+                <div class="side left">
+                    <span>Dribbble</span>
+                    <span>Behance</span>
+                    <span>CodePen</span>
+                    <span>GitHub</span>
+                    <span>Medium</span>
+
+                </div>
+                <div class="side">
+                    <span>LinkedIn</span>
+                    <span>Facebook</span>
+                    <span>Instagram</span>
+                    <span>Twitter</span>
+                </div>
+
+            </div>
+            <div class="Get__in__touch-footer">
+
+                <span class="mail">seyrig@mailme.com</span>
+                <span class="number">+ 55 6645 665544</span>
+
+
+            </div>
+            <div class="Get__in__touch-arrow">
+                <img src="./img/arrow.svg" alt=""></span>
+            </div>
+        </div>
+        <!-- end Get_in_touch -->
+    </div>
+    <!-- close container -->
 </body>
 
 </html>
