--- a/HomeWork/Template/css/style.css
+++ b/HomeWork/Template/css/style.css
@@ -5,233 +5,279 @@
 .container {
   width: 100%;
 }
-.container .hero-block {
-  width: 100%;
-  height: 100%;
-  font-family: "Libre Franklin", sans-serif;
-  background: no-repeat, rgba(198, 108, 73, 0.4);
-  background-image: url(../img/background-for-mobile.svg);
-  background-size: cover;
-  color: #ffffff;
-}
-@media screen and (min-width: 351px) {
-  .container .header {
+@media screen and (min-width: 700px) {
+  .container .hero-block {
+    width: 100%;
+    height: 100%;
+    font-family: "Libre Franklin", sans-serif;
+    background: no-repeat, rgba(198, 108, 73, 0.4);
+    background-image: url(../img/background-for-mobile.svg);
+    background-size: cover;
+    color: #ffffff;
+  }
+  .container .hero-block .header {
     display: flex;
   }
-  .container .hero-block__information {
+  .container .hero-block .header .header__navigation {
+    display: flex;
+    margin-top: 93px;
+    margin-left: 165px;
+  }
+  .container .hero-block .header .header__navigation .header__navigation-title span {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 29px;
+  }
+  .container .hero-block .header .header__navigation .menu {
+    display: flex;
+    flex-basis: 1;
+  }
+  .container .hero-block .header .header__navigation .menu li {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 22px;
+  }
+  .container .hero-block .header .header__navigation .menu li a {
+    text-decoration: none;
+    color: #fff;
+  }
+  .container .hero-block .hero-block__information {
+    margin-left: 163px;
     display: flex;
     flex-direction: column;
   }
-  .container .hero-block__information .hero-block__information__main-title {
-    margin-top: 50px;
+  .container .hero-block .hero-block__information .hero-block__information__main-title {
+    margin: 145px 0 26px;
     font-style: normal;
     font-weight: normal;
-    text-align: center;
-    font-size: 20px;
-    line-height: 24px;
+    font-size: 64px;
+    line-height: 78px;
+    display: flex;
+    align-items: center;
   }
-  .container .hero-block__information .hero-block__information__second-title {
+  .container .hero-block .hero-block__information .hero-block__information__second-title {
     font-style: normal;
     font-weight: normal;
-    text-align: center;
-    font-size: 13px;
-    line-height: 16px;
+    font-size: 24px;
+    line-height: 29px;
   }
-  .container .hero-block__information .hero-block__information__latest-works {
-    margin: 41px 0 50px 0;
+  .container .hero-block .hero-block__information .hero-block__information__latest-works {
+    margin: 106px 0 240px;
     font-style: normal;
     font-weight: normal;
-    text-align: center;
-    font-size: 13px;
-    line-height: 16px;
+    font-size: 18px;
+    line-height: 22px;
     text-decoration-line: underline;
   }
-  .container .hero-block__information .hero-block__information__latest-works a {
-    color: #ffffff;
-  }
-  .container .hero-block__information .hero-block__information__latest-works a:hover {
-    font-size: 14px;
-    color: #fff3e6;
+  .container .hero-block .hero-block__information .hero-block__information__latest-works a {
+    color: #fff;
   }
   .container .about {
+    margin: 93px 165px 115px 165px;
     display: flex;
     flex-direction: column;
     color: #333333;
     font-family: "Libre Franklin", sans-serif;
   }
   .container .about .about__title {
-    margin-top: 25px;
+    margin-bottom: 76px;
     font-style: normal;
-    font-weight: 600;
+    font-weight: bold;
     font-size: 24px;
     line-height: 29px;
-    text-align: center;
   }
   .container .about .about__information {
-    margin: 19px 29px 8px 34px;
     font-style: normal;
     font-weight: normal;
-    font-size: 12px;
-    line-height: 15px;
+    font-size: 18px;
+    line-height: 30px;
     text-align: justify;
+    margin-bottom: 115px;
   }
   .container .skills {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-wrap: wrap;
     background: #FFFAF2;
     font-family: "Libre Franklin", sans-serif;
   }
   .container .skills .profile_title {
-    margin-top: 25px;
+    margin-top: 93px;
+    margin-left: 165px;
+    margin-bottom: 86px;
     font-style: normal;
-    font-weight: 600;
+    font-weight: bold;
     font-size: 24px;
     line-height: 29px;
-    text-align: center;
+    flex-basis: 100%;
   }
   .container .skills .profile-images {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 26px;
+    margin-left: 165px;
+    margin-right: 125px;
+    margin-bottom: 145px;
   }
   .container .skills .profile-images img {
-    width: 214px;
-    height: 224px;
+    width: 350px;
+    height: 350px;
   }
   .container .skills .profile-details {
     display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
   }
   .container .skills .profile-details .profile-details-block-left-side {
-    margin-left: 34px;
-    line-height: 25px;
+    flex-basis: 1;
     font-style: normal;
-    flex-grow: 1;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 25px;
     display: flex;
     flex-direction: column;
-    font-size: 12px;
-    font-weight: 600;
+    padding-right: 78px;
   }
   .container .skills .profile-details .profile-details-block-right-side {
-    margin-bottom: 25px;
-    line-height: 25px;
+    flex-basis: 1;
     font-style: normal;
-    flex-grow: 1;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 25px;
     display: flex;
     flex-direction: column;
-    font-size: 12px;
-    font-weight: normal;
   }
   .container .skills .profile-details .profile-details-block-right-side .col-1,
 .container .skills .profile-details .profile-details-block-left-side .col-1 {
-    margin-top: 26px;
-    margin-bottom: 31px;
+    margin-bottom: 65px;
   }
-  .container .skills .profile-details .profile-details-block-right-side .col-3,
-.container .skills .profile-details .profile-details-block-left-side .col-3 {
-    margin-top: 9px;
-    margin-bottom: 18px;
-  }
-  .container .skills .profile-details .profile-details-block-right-side .col-5,
-.container .skills .profile-details .profile-details-block-left-side .col-5 {
-    margin-top: 10px;
-    margin-bottom: 18px;
-  }
-  .container .skills .profile-details .profile-details-block-right-side .col-7,
-.container .skills .profile-details .profile-details-block-left-side .col-7 {
-    margin-top: 8px;
+  .container .skills .profile-details .profile-details-block-right-side .col-2,
+.container .skills .profile-details .profile-details-block-right-side .col-3,
+.container .skills .profile-details .profile-details-block-right-side .col-4,
+.container .skills .profile-details .profile-details-block-right-side .col-5,
+.container .skills .profile-details .profile-details-block-right-side .col-6,
+.container .skills .profile-details .profile-details-block-left-side .col-2,
+.container .skills .profile-details .profile-details-block-left-side .col-3,
+.container .skills .profile-details .profile-details-block-left-side .col-4,
+.container .skills .profile-details .profile-details-block-left-side .col-5,
+.container .skills .profile-details .profile-details-block-left-side .col-6 {
+    margin-bottom: 20px;
   }
   .container .portfolio {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     font-family: "Libre Franklin", sans-serif;
   }
-  .container .portfolio .portfolio__title {
+  .container .portfolio .row {
+    margin: 93px 0px 145px 165px;
+  }
+  .container .portfolio .row .portfolio__title {
     display: flex;
     flex-direction: column;
   }
-  .container .portfolio .portfolio__title .portfolio__title-main {
-    margin: 25px 0 19px;
+  .container .portfolio .row .portfolio__title .portfolio__title-main {
     font-style: normal;
-    font-weight: 600;
+    font-weight: bold;
     font-size: 24px;
     line-height: 29px;
-    text-align: center;
+    margin-bottom: 48px;
   }
-  .container .portfolio .portfolio__title .portfolio__title-second {
-    margin-bottom: 15px;
+  .container .portfolio .row .portfolio__title .portfolio__title-second {
     font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
+    font-weight: 600;
+    font-size: 18px;
     line-height: 25px;
-    text-align: center;
+    margin-bottom: 48px;
   }
-  .container .portfolio .portfolio__info p {
-    padding-bottom: 25px;
+  .container .portfolio .row .portfolio__images {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .container .portfolio .row .portfolio__images .portfolio__info {
+    flex-basis: 350px;
+    margin-right: 126px;
+  }
+  .container .portfolio .row .portfolio__images .portfolio__info p {
     font-style: normal;
     font-weight: normal;
-    text-align: center;
-    font-size: 12px;
-    line-height: 15px;
+    font-size: 18px;
+    line-height: 30px;
+    text-align: justify;
   }
-  .container .portfolio .portfolio__images {
+  .container .portfolio .row .portfolio__images .portfolio__info .portfolio__arrows {
     display: flex;
-    margin-bottom: 25px;
   }
-  .container .portfolio .portfolio__images .side-left {
-    margin-left: 34px;
+  .container .portfolio .row .portfolio__images .portfolio__info .portfolio__arrows span {
+    margin-top: 235px;
+  }
+  .container .portfolio .row .portfolio__images .portfolio__info .portfolio__arrows span .arrow {
     margin-right: 14px;
   }
-  .container .portfolio .portfolio__images .side-left .portfolio-images {
-    margin-bottom: 12px;
-  }
-  .container .portfolio .portfolio__images .side-right {
-    margin-right: 33px;
-  }
-  .container .portfolio .portfolio__images .side-right .portfolio-images {
-    margin-bottom: 10px;
-  }
-  .container .Get__in__touch {
+  .container .portfolio .row .portfolio__images .side-left {
     display: flex;
     flex-direction: column;
+  }
+  .container .portfolio .row .portfolio__images .side-left .img-1 {
+    margin-bottom: 26px;
+    margin-right: 30px;
+  }
+  .container .portfolio .row .portfolio__images .side-left img {
+    width: 350px;
+  }
+  .container .portfolio .row .portfolio__images .side-right {
+    display: flex;
+    flex-direction: column;
+  }
+  .container .portfolio .row .portfolio__images .side-right .img-1 {
+    margin-bottom: 24px;
+  }
+  .container .portfolio .row .portfolio__images .side-right img {
+    width: 255px;
+  }
+  .container .Get__in__touch {
     font-family: "Libre Franklin", sans-serif;
-    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
     background: #FFFAF2;
   }
   .container .Get__in__touch .Get__in__touch-title {
-    margin: 3px 0 22px;
+    margin-top: 93px;
+    margin-left: 165px;
+    margin-bottom: 31px;
     font-style: normal;
-    font-weight: 600;
+    font-weight: bold;
     font-size: 24px;
     line-height: 29px;
-    text-align: center;
+    flex-basis: 100%;
   }
   .container .Get__in__touch .Get__in__touch-details {
     display: flex;
-    margin-bottom: 30px;
+    flex-direction: row;
+    margin-left: 165px;
+    margin-bottom: 189px;
+    margin-right: 300px;
   }
   .container .Get__in__touch .Get__in__touch-details .left {
-    margin-left: 42px;
+    display: flex;
+    flex-direction: column;
+    margin-right: 300px;
+  }
+  .container .Get__in__touch .Get__in__touch-details .left span {
+    margin-bottom: 14px;
   }
   .container .Get__in__touch .Get__in__touch-details .side {
-    flex-basis: 50%;
+    display: flex;
+    flex-direction: column;
   }
-  .container .Get__in__touch .Get__in__touch-details span {
-    display: block;
-    margin-top: 19px;
+  .container .Get__in__touch .Get__in__touch-details .side span {
+    margin-bottom: 14px;
   }
   .container .Get__in__touch .Get__in__touch-footer {
     display: flex;
-    justify-content: space-between;
+    flex-flow: column wrap;
   }
-  .container .Get__in__touch .Get__in__touch-footer p {
-    margin: 0 0 50px 42px;
+  .container .Get__in__touch .Get__in__touch-footer .mail {
+    margin-bottom: 14px;
   }
-  .container .Get__in__touch .Get__in__touch-footer span {
-    margin: 0 32px 58px 0;
+  .container .Get__in__touch .Get__in__touch-arrow {
+    margin-left: 143px;
+    margin-top: 239px;
+    margin-right: 180px;
   }
 }
 
