--- a/HomeWork/Template/index.html
+++ b/HomeWork/Template/index.html
@@ -14,38 +14,39 @@
 <body>
     <div class="container">
         <!-- start container -->
-        <div class="row"></div>
+
         <!-- start hero-block -->
         <div class="hero-block">
 
             <div class="header">
-
-                <div class="header__navigation">
-                    <div class="row">
+                <div class="row">
+                    <!-- start header__navigation -->
+                    <div class="header__navigation">
                         <div class="header__navigation-title">
-                            <span>Portofolio</span>
+                            <span><a href="#">Portofolio</a></span>
                         </div>
                         <ul class="menu">
                             <li>
-                                <a href="">Home</a>
+                                <a href="#">Home</a>
                             </li>
                             <li>
-                                <a href="">About</a>
+                                <a href="#">About</a>
                             </li>
                             <li>
-                                <a href="">Skills</a>
+                                <a href="#">Skills</a>
                             </li>
                             <li>
-                                <a href="">Portfolio</a>
+                                <a href="#">Portfolio</a>
                             </li>
                             <li>
-                                <a href="">Contact</a>
+                                <a href="#">Contact</a>
                             </li>
                             <li>
-                                <a href=""></a>
+                                <a href="#"></a>
                             </li>
                         </ul>
                     </div>
+                    <!-- end header__navigation -->
                 </div>
                 <!-- <div class="header__navigation">
                     <a href="">
@@ -53,62 +54,74 @@
                     </a>
                 </div> -->
 
+                <!-- //end header -->
             </div>
+
             <div class="hero-block__information">
-                <div class="hero-block__information__main-title">
-                    Hi, It’s Théophile Seyrig
+                <div class="row">
+                    <div class="hero-block__information__main-title">
+                        Hi, It’s Théophile Seyrig
+                    </div>
+                    <div class="hero-block__information__second-title">
+                        Designer from Porto, Portugal
+                    </div>
+                    <div class="hero-block__information__latest-works">
+                        <a href="#"> Latest works</a></div>
                 </div>
-                <div class="hero-block__information__second-title">
-                    Designer from Porto, Portugal
-                </div>
-                <div class="hero-block__information__latest-works">
-                    <a href="#"> Latest works</a></div>
             </div>
         </div>
         <!-- close hero-block -->
 
         <!-- start about -->
         <div class="about">
-            <div class="about__title">
-                <span>About</span>
-            </div>
-            <div class="about__information">
-                <p>Lorem ipsum dolor sit amet, Arcu, sed nisi, mi, arcu libero phasellus tincidunt. Rhoncus, diam penatibus aliquet tellus, in rutrum augue. Pellentesque senectus risus consectetur et sed purus sed. Consectetur adipiscing elit. Egestas porttitor
-                    nulla nulla egestas odio pharetra egestas aliquet mollis. <br><br> Arcu, sed nisi, mi, arcu libero phasellus tincidunt. Rhoncus, diam penatibus aliquet tellus, in rutrum augue. Pellentesque senectus risus consectetur et sed purus sed.
-                    Consectetur adipiscing elit. Egestas porttitor nulla nulla egestas odio pharetra egestas aliquet mollis. diam penatibus aliquet tellus, in rutrum augue. Pellentesque.</p>
+            <div class="row">
+                <div class="about__title">
+                    <span>About</span>
+                </div>
+                <div class="about__information">
+                    <p>Lorem ipsum dolor sit amet, Arcu, sed nisi, mi, arcu libero phasellus tincidunt. Rhoncus, diam penatibus aliquet tellus, in rutrum augue. Pellentesque senectus risus consectetur et sed purus sed. Consectetur adipiscing elit. Egestas
+                        porttitor nulla nulla egestas odio pharetra egestas aliquet mollis. <br><br> Arcu, sed nisi, mi, arcu libero phasellus tincidunt. Rhoncus, diam penatibus aliquet tellus, in rutrum augue. Pellentesque senectus risus consectetur
+                        et sed purus sed. Consectetur adipiscing elit. Egestas porttitor nulla nulla egestas odio pharetra egestas aliquet mollis. diam penatibus aliquet tellus, in rutrum augue. Pellentesque.</p>
+                </div>
             </div>
         </div>
         <!-- close about -->
         <!-- start skills -->
         <div class="skills">
-            <div class="profile_title">
-                <span>
+            <div class="row">
+                <div class="profile_title">
+                    <span>
                     Skills
                 </span>
-            </div>
-            <div class="profile-images"><img src="./img/profile-picture.svg" alt=""></div>
-            <div class="profile-details">
-                <div class="profile-details-block-left-side">
-                    <span class="col-1">Profile</span>
-                    <span class="col-2">UX Research</span>
-                    <span class="col-3">Tools</span>
-                    <span class="col-4">UI Design</span>
-                    <span class="col-5">Tools</span>
-                    <span class="col-6">Front-end Dev</span>
-                    <span class="col-7">Tools</span>
-
-                </div>
-                <div class="profile-details-block-right-side">
-                    <span class="col-1">UI / UX Engineer, Front-end Developer</span>
-                    <span class="col-2"><img src="./img/progress-bar.svg" alt=""></span>
-                    <span class="col-3">HTML, CSS, JS, Bootstrap, Reactols</span>
-                    <span class="col-4"><img src="./img/progress-bar.svg" alt=""></span>
-                    <span class="col-5">Adobe PS, AI, XD, Figma, InVision</span>
-                    <span class="col-6"><img src="./img/progress-bar.svg" alt=""></span>
-                    <span class="col-7">Paper, Pen, Balsamiq</span>
-                    <!-- <img src="./img/progress-bar.svg" alt=""> -->
                 </div>
 
+
+
+                <div class="profile-details">
+                    <div class="profile-images"><img src="./img/profile-picture.svg" alt="">
+                    </div>
+                    <div class="profile-details-block-left-side">
+                        <span class="col-1">Profile</span>
+                        <span class="col-2">UX Research</span>
+                        <span class="col-3">Tools</span>
+                        <span class="col-4">UI Design</span>
+                        <span class="col-5">Tools</span>
+                        <span class="col-6">Front-end Dev</span>
+                        <span class="col-7">Tools</span>
+
+                    </div>
+                    <div class="profile-details-block-right-side">
+                        <span class="col-1">UI / UX Engineer, Front-end Developer</span>
+                        <span class="col-2"><img src="./img/progress-bar.svg" alt=""></span>
+                        <span class="col-3">HTML, CSS, JS, Bootstrap, Reactols</span>
+                        <span class="col-4"><img src="./img/progress-bar.svg" alt=""></span>
+                        <span class="col-5">Adobe PS, AI, XD, Figma, InVision</span>
+                        <span class="col-6"><img src="./img/progress-bar.svg" alt=""></span>
+                        <span class="col-7">Paper, Pen, Balsamiq</span>
+                        <!-- <img src="./img/progress-bar.svg" alt=""> -->
+                    </div>
+
+                </div>
             </div>
         </div>
         <!-- close skills -->
@@ -124,8 +137,8 @@
                     <div class="portfolio__info">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ac dictum nibh nam odio cursus id. Diam massa semper a tincidunt cursus ultricies lectus eget urna.</p>
                         <div class="portfolio__arrows">
-                            <span><img class="arrow"src="./img/arrow-left.svg" alt="">
-                            <img src="./img/arrow-right.svg" alt=""></span>
+                            <span><a href="#"><img class="arrow"src="./img/arrow-left.svg" alt=""></a>
+                            <a href="#"><img src="./img/arrow-right.svg" alt=""></a></span>
                         </div>
                     </div>
                     <div class="side-left">
@@ -147,18 +160,17 @@
             <div class="Get__in__touch-title"><span>Get in Touch</span></div>
             <div class="Get__in__touch-details">
                 <div class="side left">
-                    <span>Dribbble</span>
-                    <span>Behance</span>
-                    <span>CodePen</span>
-                    <span>GitHub</span>
-                    <span>Medium</span>
-
+                    <span><a href="#">Dribbble</a></span>
+                    <span><a href="#">Behance</a></span>
+                    <span><a href="#">CodePen</a></span>
+                    <span><a href="#">GitHub</a></span>
+                    <span><a href="#">GitHub</a></span>
                 </div>
                 <div class="side">
-                    <span>LinkedIn</span>
-                    <span>Facebook</span>
-                    <span>Instagram</span>
-                    <span>Twitter</span>
+                    <span><a href="#">LinkedIn</a></span>
+                    <span><a href="#">Facebook</a></span>
+                    <span><a href="#">Instagram</a></span>
+                    <span><a href="#">Twitter</a></span>
                 </div>
 
             </div>
@@ -170,7 +182,9 @@
 
             </div>
             <div class="Get__in__touch-arrow">
-                <img src="./img/arrow.svg" alt=""></span>
+                <a href="#">
+                    <img src="./img/arrow.svg" alt=""></span>
+                </a>
             </div>
         </div>
         <!-- end Get_in_touch -->
