editing code (desktop version)

--- a/HomeWork/Template/css/style.scss
+++ b/HomeWork/Template/css/style.scss
@@ -303,30 +303,30 @@
         }
         //end Get_in_touch
         @media screen and (min-width: 351px) {
-            //     //start header
-            .header {
-                display: flex;
-                .header__navigation {
-                    margin: 39px 0px 0px 34px;
-                    flex-grow: 1;
-                    align-self: flex-end;
-                    img {
-                        width: 24px;
-                        height: 24px;
-                    }
-                }
-                .header__title {
-                    flex-grow: 99;
-                    margin: 36px 128px 0px 71px;
-                    text-align: center;
-                    span {
-                        font-style: normal;
-                        font-weight: bold;
-                        font-size: 24px;
-                        line-height: 29px;
-                    }
-                }
-            }
+            // //     //start header
+            // .header {
+            //     display: flex;
+            //     .header__navigation {
+            //         margin: 39px 0px 0px 34px;
+            //         flex-grow: 1;
+            //         align-self: flex-end;
+            //         img {
+            //             width: 24px;
+            //             height: 24px;
+            //         }
+            //     }
+            //     .header__title {
+            //         flex-grow: 99;
+            //         margin: 36px 128px 0px 71px;
+            //         text-align: center;
+            //         span {
+            //             font-style: normal;
+            //             font-weight: bold;
+            //             font-size: 24px;
+            //             line-height: 29px;
+            //         }
+            //     }
+            // }
             //     } //close header
             //     // // start hero-block__information
             //     .hero-block__information {
